@startuml

title __PREDMETY's Class Diagram__\n

  namespace sk.uniza.fri {
    namespace predmety {
      class sk.uniza.fri.predmety.Minca {
          + Minca()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace predmety {
      abstract class sk.uniza.fri.predmety.Predmet {
          + Predmet()
          + pohyb()
          + zober()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace predmety {
      class sk.uniza.fri.predmety.Siska {
          + Siska()
          + getSmer()
          + posun()
          + setSmer()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace predmety {
      class sk.uniza.fri.predmety.Zivot {
          + Zivot()
      }
    }
  }
  

  sk.uniza.fri.predmety.Minca -up-|> sk.uniza.fri.predmety.Predmet
  sk.uniza.fri.predmety.Predmet -up-|> sk.uniza.fri.ZakladnaTrieda
  sk.uniza.fri.predmety.Siska -up-|> sk.uniza.fri.predmety.Predmet
  sk.uniza.fri.predmety.Siska o-- sk.uniza.fri.Smer : smer
  sk.uniza.fri.predmety.Zivot -up-|> sk.uniza.fri.predmety.Predmet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
